# reno_agent

./: .cursorignore  .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/agent/: renovation_agent.py
app/api/v1/: router.py
app/api/v1/routes/: chat.py  health.py  leads.py
app/core/: config.py
app/llm/: client.py
app/prompts/: renovation_system.md
cursor/rules/: 00-global.mdc  10-fastapi.mdc  20-llm-backend.mdc  30-tests.mdc  40-tooling.mdc  50-makefile.mdc
infra/: cloudbuild.yaml
infra/docker/: .dockerignore  Dockerfile
infra/scripts/: build.sh  deploy.sh  setup_github_iam.sh  setup_iam.sh
tests/: conftest.py  test_chat_route.py
